kubernetes/namespace/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls:
    - secretName: dev-praekiko-tk-lets-encrypt-prod-tls
  hosts:
    - dev.praekiko.tk
  rules:
    - host: dev.praekiko.tk
      http:
        paths:
          - path: /*
            backend:
              serviceName: react-ssr
              servicePort: 8080
          - path: /api/*
            backend:
              serviceName: express-api
              servicePort: 8080
